[gd_scene load_steps=4 format=3 uid="uid://dwjnjoaxlsqc8"]

[ext_resource type="Script" path="res://scripts/global_scripts/global_settings.gd" id="1_mpwj3"]
[ext_resource type="AudioStream" uid="uid://dymq3bfkggqi8" path="res://music/asmarafulldemo.mp3" id="5_k0r70"]
[ext_resource type="Script" path="res://scripts/global_scripts/camera_2d.gd" id="5_uxnr8"]

[node name="GlobalSettings" type="Node2D"]
process_mode = 3
y_sort_enabled = true
script = ExtResource("1_mpwj3")

[node name="Party" type="Node2D" parent="."]
unique_name_in_owner = true
process_mode = 1
y_sort_enabled = true

[node name="Standby" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
process_mode = 3
position_smoothing_enabled = true
script = ExtResource("5_uxnr8")

[node name="ShakeTimer" type="Timer" parent="Camera2D"]
unique_name_in_owner = true
one_shot = true

[node name="GlobalBgmPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_k0r70")
autoplay = true
bus = &"Music"

[connection signal="timeout" from="Camera2D/ShakeTimer" to="Camera2D" method="_on_timer_timeout"]
